recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:4: error: ';' expected but 'if' found.
3 if (n == 0) Nil
  ^nfirst:5: error: ';' expected but 'else' found.
4 else l.head :: nFirsts(l.tail, n-1)
  ^